rlctbg/raylib.py

    'update_texture',
    'image_copy',
    'image_from_image',
    'image_to_pot',
    'image_format',
    'image_alpha_mask',
    'image_alpha_clear',
    'image_alpha_crop',
    'image_alpha_premultiply',
    'image_crop',
    'image_resize',
    'image_resize_nn',
    'image_resize_canvas',
    'image_mipmaps',
    'image_dither',
    'image_extract_palette',
    'image_text',
    'image_text_ex',
    'image_draw',
    'image_draw_rectangle',
    'image_draw_rectangle_lines',
    'image_draw_text',
    'image_draw_text_ex',
    'image_flip_vertical',
    'image_flip_horizontal',
    'image_rotate_cw',
    'image_rotate_ccw',
    'image_color_tint',
    'image_color_invert',
    'image_color_grayscale',
    'image_color_contrast',
    'image_color_brightness',
    'image_color_replace',
    'gen_image_color',
    'gen_image_gradient_v',
    'gen_image_gradient_h',
    'gen_image_gradient_radial',
    'gen_image_checked',
    'gen_image_white_noise',
    'gen_image_perlin_noise',
    'gen_image_cellular',
    'gen_texture_mipmaps',
    'set_texture_filter',
    'set_texture_wrap',
    'draw_texture',
    'draw_texture_v',
    'draw_texture_ex',
    'draw_texture_rec',
    'draw_texture_quad',
    'draw_texture_pro',
    'draw_texture_npatch',
    'get_font_default',
    'load_font',
    'load_font_ex',
    'load_font_from_image',
    'load_font_data',
    'gen_image_font_atlas',
    'unload_font',
    'draw_fps',
    'draw_text',
    'draw_text_ex',
    'draw_text_rec',
    'draw_text_codepoint',
    'measure_text',
    'measure_text_ex',
    'get_glyph_index',
    'text_is_equal',
    'text_length',
    'text_format',
    'text_subtext',
    'text_replace',
    'text_insert',
    'text_join',
    'text_split',
    'text_append',
    'text_find_index',
    'text_to_upper',
    'text_to_lower',
    'text_to_pascal',
    'text_to_integer',
    'text_to_utf8',
    'get_codepoints',
    'get_codepoints_count',
    'get_next_codepoint',
    'codepoint_to_utf8',
    'draw_line3_d',
    'draw_circle3_d',
    'draw_cube',
    'draw_cube_v',
    'draw_cube_wires',
    'draw_cube_wires_v',
    'draw_cube_texture',
    'draw_sphere',
    'draw_sphere_ex',
    'draw_sphere_wires',
    'draw_cylinder',
    'draw_cylinder_wires',
    'draw_plane',
    'draw_ray',
    'draw_grid',
    'draw_gizmo',
    'load_model',
    'load_model_from_mesh',
    'unload_model',
    'load_meshes',
    'export_mesh',
    'unload_mesh',
    'load_materials',
    'load_material_default',
    'unload_material',
    'set_material_texture',
    'set_model_mesh_material',
    'load_model_animations',
    'update_model_animation',
    'unload_model_animation',
    'is_model_animation_valid',
    'gen_mesh_poly',
    'gen_mesh_plane',
    'gen_mesh_cube',
    'gen_mesh_sphere',
    'gen_mesh_hemi_sphere',
    'gen_mesh_cylinder',
    'gen_mesh_torus',
    'gen_mesh_knot',
    'gen_mesh_heightmap',
    'gen_mesh_cubicmap',
    'mesh_bounding_box',
    'mesh_tangents',
    'mesh_binormals',
    'draw_model',
    'draw_model_ex',
    'draw_model_wires',
    'draw_model_wires_ex',
    'draw_bounding_box',
    'draw_billboard',
    'draw_billboard_rec',
    'check_collision_spheres',
    'check_collision_boxes',
    'check_collision_box_sphere',
    'check_collision_ray_sphere',
    'check_collision_ray_sphere_ex',
    'check_collision_ray_box',
    'get_collision_ray_model',
    'get_collision_ray_triangle',
    'get_collision_ray_ground',
    'load_text',
    'load_shader',
    'load_shader_code',
    'unload_shader',
    'get_shader_default',
    'get_texture_default',
    'get_shader_location',
    'set_shader_value',
    'set_shader_value_v',
    'set_shader_value_matrix',
    'set_shader_value_texture',
    'set_matrix_projection',
    'set_matrix_modelview',
    'get_matrix_modelview',
    'get_matrix_projection',
    'gen_texture_cubemap',
    'gen_texture_irradiance',
    'gen_texture_prefilter',
    'gen_texture_brdf',
    'begin_shader_mode',
    'end_shader_mode',
    'begin_blend_mode',
    'end_blend_mode',
    'init_vr_simulator',
    'close_vr_simulator',
    'update_vr_tracking',
    'set_vr_configuration',
    'is_vr_simulator_ready',
    'toggle_vr_mode',
    'begin_vr_drawing',
    'end_vr_drawing',
    'init_audio_device',
    'close_audio_device',
    'is_audio_device_ready',
    'set_master_volume',
    'load_wave',
    'load_sound',
    'load_sound_from_wave',
    'update_sound',
    'unload_wave',
    'unload_sound',
    'export_wave',
    'export_wave_as_code',
    'play_sound',
    'stop_sound',
    'pause_sound',
    'resume_sound',
    'play_sound_multi',
    'stop_sound_multi',
    'get_sounds_playing',
    'is_sound_playing',
    'set_sound_volume',
    'set_sound_pitch',
    'wave_format',
    'wave_copy',
    'wave_crop',
    'get_wave_data',
    'load_music_stream',
    'unload_music_stream',
    'play_music_stream',
    'update_music_stream',
    'stop_music_stream',
    'pause_music_stream',
    'resume_music_stream',
    'is_music_playing',
    'set_music_volume',
    'set_music_pitch',
    'set_music_loop_count',
    'get_music_time_length',
    'get_music_time_played',
    'init_audio_stream',
    'update_audio_stream',
    'close_audio_stream',
    'is_audio_stream_processed',
    'play_audio_stream',
    'pause_audio_stream',
    'resume_audio_stream',
    'is_audio_stream_playing',
    'stop_audio_stream',
    'set_audio_stream_volume',
    'set_audio_stream_pitch',
]

PI = 3.14159265358979323846
DEG2RAD = (PI/180.0)
RAD2DEG = (180.0/PI)
MAX_TOUCH_POINTS = 10


class Vector2(Structure):
    """Vector2 type"""
    _fields_ = [
       ('x', c_float),
       ('y', c_float),
    ]


class Vector3(Structure):
    """Vector3 type"""
    _fields_ = [
       ('x', c_float),
       ('y', c_float),
       ('z', c_float),
    ]


class Vector4(Structure):
    """Vector4 type"""
    _fields_ = [
       ('x', c_float),
       ('y', c_float),
       ('z', c_float),
       ('w', c_float),
    ]


Quaternion = Vector4


class Matrix(Structure):
    """Matrix type (OpenGL style 4x4 - right handed, column major)"""
    _fields_ = [
       ('m0', c_float),
       ('m4', c_float),
       ('m8', c_float),
       ('m12', c_float),
       ('m1', c_float),
       ('m5', c_float),
       ('m9', c_float),
       ('m13', c_float),
       ('m2', c_float),
       ('m6', c_float),
       ('m10', c_float),
       ('m14', c_float),
       ('m3', c_float),
       ('m7', c_float),
       ('m11', c_float),
       ('m15', c_float),
    ]


class Color(Structure):
    """Color type, RGBA (32bit)"""
    _fields_ = [
       ('r', c_ubyte),
       ('g', c_ubyte),
       ('b', c_ubyte),
       ('a', c_ubyte),
    ]


class Rectangle(Structure):
    """Rectangle type"""
    _fields_ = [
       ('x', c_float),
       ('y', c_float),
       ('width', c_float),
       ('height', c_float),
    ]


class Image(Structure):
    """NOTE: Data stored in CPU memory (RAM)"""
    _fields_ = [
       ('data', c_void_p),
       ('width', c_int),
       ('height', c_int),
       ('mipmaps', c_int),
       ('format', c_int),
    ]


class Texture2D(Structure):
    """NOTE: Data stored in GPU memory"""
    _fields_ = [
       ('id', c_uint),
       ('width', c_int),
       ('height', c_int),
       ('mipmaps', c_int),
       ('format', c_int),
    ]


Texture = Texture2D


TextureCubemap = Texture2D


class RenderTexture2D(Structure):
    """RenderTexture2D type, for texture rendering"""
    _fields_ = [
       ('id', c_uint),
       ('texture', Texture2D),
       ('depth', Texture2D),
       ('depthTexture', c_bool),
    ]


RenderTexture = RenderTexture2D


class NPatchInfo(Structure):
    """N-Patch layout info"""
    _fields_ = [
       ('sourceRec', Rectangle),
       ('left', c_int),
       ('top', c_int),
       ('right', c_int),
       ('bottom', c_int),
       ('type', c_int),
    ]


class CharInfo(Structure):
    """Font character info"""
    _fields_ = [
       ('value', c_int),
       ('offsetX', c_int),
       ('offsetY', c_int),
       ('advanceX', c_int),
       ('image', Image),
    ]


class Font(Structure):
    """Font type, includes texture and charSet array data"""
    _fields_ = [
       ('baseSize', c_int),
       ('charsCount', c_int),
       ('texture', Texture2D),
       ('recs', POINTER(Rectangle)),
       ('chars', POINTER(CharInfo)),
    ]


SpriteFont = Font


class Camera3D(Structure):
    """Camera type, defines a camera position/orientation in 3d space"""
    _fields_ = [
       ('position', Vector3),
       ('target', Vector3),
       ('up', Vector3),
       ('fovy', c_float),
       ('type', c_int),
    ]


Camera = Camera3D


class Camera2D(Structure):
    """Camera2D type, defines a 2d camera"""
    _fields_ = [
       ('offset', Vector2),
       ('target', Vector2),
       ('rotation', c_float),
       ('zoom', c_float),
    ]


class Mesh(Structure):
    """NOTE: Data stored in CPU memory (and GPU)"""
    _fields_ = [
       ('vertexCount', c_int),
       ('triangleCount', c_int),
       ('vertices', POINTER(c_float)),
       ('texcoords', POINTER(c_float)),
       ('texcoords2', POINTER(c_float)),
       ('normals', POINTER(c_float)),
       ('tangents', POINTER(c_float)),
       ('colors', POINTER(c_ubyte)),
       ('indices', POINTER(c_ushort)),
       ('animVertices', POINTER(c_float)),
       ('animNormals', POINTER(c_float)),
       ('boneIds', POINTER(c_int)),
       ('boneWeights', POINTER(c_float)),
       ('vaoId', c_uint),
       ('vboId', POINTER(c_uint)),
    ]


class Shader(Structure):
    """Shader type (generic)"""
    _fields_ = [
       ('id', c_uint),
       ('locs', POINTER(c_int)),
    ]


class MaterialMap(Structure):
    """Material texture map"""
    _fields_ = [
       ('texture', Texture2D),
       ('color', Color),
       ('value', c_float),
    ]


class Material(Structure):
    """Material type (generic)"""
    _fields_ = [
       ('shader', Shader),
       ('maps', POINTER(MaterialMap)),
       ('params', POINTER(c_float)),
    ]


class Transform(Structure):
    """Transformation properties"""
    _fields_ = [
       ('translation', Vector3),
       ('rotation', Quaternion),
       ('scale', Vector3),
    ]


class BoneInfo(Structure):
    """Bone information"""
    _fields_ = [
       ('name', c_char * 32),
       ('parent', c_int),
    ]


class Model(Structure):
    """Model type"""
    _fields_ = [
       ('transform', Matrix),
       ('meshCount', c_int),
       ('meshes', POINTER(Mesh)),
       ('materialCount', c_int),
       ('materials', POINTER(Material)),
       ('meshMaterial', POINTER(c_int)),
       ('boneCount', c_int),
       ('bones', POINTER(BoneInfo)),
       ('bindPose', POINTER(Transform)),
    ]


class ModelAnimation(Structure):
    """Model animation"""
    _fields_ = [
       ('boneCount', c_int),
       ('bones', POINTER(BoneInfo)),
       ('frameCount', c_int),
       ('framePoses', POINTER(POINTER(Transform))),
    ]


class Ray(Structure):
    """Ray type (useful for raycast)"""
    _fields_ = [
       ('position', Vector3),
       ('direction', Vector3),
    ]


class RayHitInfo(Structure):
    """Raycast hit information"""
    _fields_ = [
       ('hit', c_bool),
       ('distance', c_float),
       ('position', Vector3),
       ('normal', Vector3),
    ]


class BoundingBox(Structure):
    """Bounding box type"""
    _fields_ = [
       ('min', Vector3),
       ('max', Vector3),
    ]


class Wave(Structure):
    """Wave type, defines audio wave data"""
    _fields_ = [
       ('sampleCount', c_uint),
       ('sampleRate', c_uint),
       ('sampleSize', c_uint),
       ('channels', c_uint),
       ('data', c_void_p),
    ]


class rAudioBuffer(Structure):
    pass

